# cmake-demo

Demo1/: CMakeCache.txt  CMakeLists.txt  Demo1  Makefile  cmake_install.cmake  note.md
Demo2/: CMakeCache.txt  CMakeLists.txt  Demo2  Makefile  cmake_install.cmake
Demo3/: CMakeCache.txt  CMakeLists.txt  Demo3  Makefile  cmake_install.cmake
Demo3/math/: CMakeLists.txt  Makefile  cmake_install.cmake
Demo4/: CMakeCache.txt  CMakeLists.txt  Demo4  Makefile  cmake_install.cmake
Demo5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Demo5  Makefile  cmake_install.cmake  install_manifest.txt  main.cc
Demo5/Testing/Temporary/: CTestCostData.txt
Demo5/math/: Makefile  cmake_install.cmake
Demo6/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Demo  Makefile  cmake_install.cmake  install_manifest.txt  main.cc
Demo6/Testing/Temporary/: CTestCostData.txt
Demo7/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
Demo7/Testing/Temporary/: CTestCostData.txt
Demo8/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
Demo8/_CPack_Packages/Darwin/STGZ/: Demo8-1.0.1-Darwin.sh
